2011-11-21  Christian Weiske  <cweiske@cweiske.de>

	* hide color buttons when no/only one page configured
	* hide default page config option when no page defined

2011-11-18  Christian Weiske  <cweiske@cweiske.de>

	* Add help screens
	* Fix fixed size menu title setting
	* Add messages.pot to ipkg distribution
	* Translations work now
	* Version 0.3

2011-11-17  Christian Weiske  <cweiske@cweiske.de>

	* Version 0.2