@@ -2,6 +2,7 @@
 
 	* hide color buttons when no/only one page configured
 	* hide default page config option when no page defined
+	* show current page when multiple ones are defined: "2/6"
 
 2011-11-18  Christian Weiske  <cweiske@cweiske.de>
 
